--- a/Readme
+++ b/Readme
@@ -2,9 +2,9 @@
 
 COMPANY : CODTECH IT SOLUTIONS
 
-NAME: SALAI NISHANTH S
+NAME: R.TIVAKHAR
 
-INTERN ID: CT04DG2041
+INTERN ID: 
 
 DOMAIN: JAVA PROGRAMMING
 
